cabal-version: 2.4
name:          escherscape
version:       0.1.0.0

synopsis:     Procedural generation of 3D landscapes
description:  Procedural generation of 3D landscapes
bug-reports:  https://github.com/glocq/escherscape/issues
license:      MIT
license-file: LICENSE
author:       Grégoire Locqueville
maintainer:   gregoireloc@gmail.com
copyright:    Copyright (c) 2023 Grégoire Locqueville
category:     Game

executable escherscape
    main-is:          Main.hs
    other-modules:    Render,
                      Chunk,
                      Model,
                      Viewpoint,
                      Input,
                      GameState,
                      Scene,
                      Config,
                      Random
    build-depends:    base                  >= 4.16.4 && < 5,
                      directory            ^>= 1.3.6,
                      filepath             ^>= 1.4.2,
                      unordered-containers ^>= 0.2.19,
                      containers           ^>= 0.6.5,
                      vector               ^>= 0.13.0,
                      mtl                  ^>= 2.2.2,
                      random,
                      MonadRandom,
                      hashable,
                      monad-loops          ^>= 0.4.3,
                      lens                 ^>= 5.2.2,
                      async                ^>= 2.2.4,
                      stm                  ^>= 2.5.0,
                      h-raylib             ^>= 4.6.0
    hs-source-dirs:   src
    default-language: Haskell2010
